--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,4 +1,12 @@
-@charset "utf-8";
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Nunito');
+
+// Variables
+@import 'variables';
+
+// Bootstrap
+@import '~bootstrap/scss/bootstrap';
+
 
 body{
     margin: 0;
